err/django-fabtastic.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_fabtastic-1.1.egg-info'...
Listing './lib/python3.5/site-packages/fabtastic'...
Listing './lib/python3.5/site-packages/fabtastic/db'...
Compiling './lib/python3.5/site-packages/fabtastic/db/postgres.py'...
***   File "./lib/python3.5/site-packages/fabtastic/db/postgres.py", line 82
    print "pg_dumping database '%s' to %s" % (database['NAME'], dump_path)
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fabtastic/fabric'...
Listing './lib/python3.5/site-packages/fabtastic/fabric/commands'...
Compiling './lib/python3.5/site-packages/fabtastic/fabric/commands/c_celery.py'...
***   File "./lib/python3.5/site-packages/fabtastic/fabric/commands/c_celery.py", line 17
    print "Celery shutdown broadcasted, workers restarting."
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/fabtastic/management'...
Listing './lib/python3.5/site-packages/fabtastic/management/commands'...
Listing './lib/python3.5/site-packages/fabtastic/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
